--- a/templates/home.html
+++ b/templates/home.html
@@ -29,7 +29,11 @@
       <div class="row">
 
         <div class="span4 offset2">
-          <input id="fileinput" type="file">
+          <!-- Upload a File -->
+          <p>Select a file: <input id="fileinput" type="file"></p>
+          <p>Encrypt the uploaded file: <input id="encrypt" type="checkbox" value="encrypt" /></p>
+          <p>Password: <input id="password" type="password"></p>
+
               <div class="fileupload fileupload-new" data-provides="fileupload" id="upload" visibility="hidden">
 
                 <div class="input-append">
