--- a/templates/search.html
+++ b/templates/search.html
@@ -1,155 +1,16 @@
-<!DOCTYPE html>
-<!-- saved from url=(0054)http://twitter.github.com/bootstrap/examples/hero.html -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
-    <title>Simplebox</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+{% extends "base.html" %}
 
-    <!-- Le styles -->
-    <link href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css" rel="stylesheet">
-    <style type="text/css">
-      body {
-        padding-top: 60px;
-        padding-bottom: 40px;
-      }
-    </style>
-    <style type="text/css">
-      .input-append button.add-on {
-      height: inherit !important;
-}
 
-    </style>
-    <link href="http://twitter.github.com/bootstrap/assets/css/bootstrap-responsive.css" rel="stylesheet">
+{% block content %}
 
-    <link href="{{STATIC_URL}}css/jasny-bootstrap.css" rel="stylesheet">
-    <link href="{{STATIC_URL}}css/jasny-bootstrap-responsive.css" rel="stylesheet">
-
-    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
-    <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="http://twitter.github.com/bootstrap/assets/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-57-precomposed.png">
-  <style type="text/css"></style></head>
-
-  <body>
-
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="{% url home %}">Simplebox</a>
-          <div class="nav-collapse">
-            <ul class="nav">
-              <li class="active"><a href="http://twitter.github.com/bootstrap/examples/hero.html#">Home</a></li>
-              <li><a href="http://twitter.github.com/bootstrap/examples/hero.html#about">About</a></li>
-              <li><a href="http://twitter.github.com/bootstrap/examples/hero.html#contact">Contact</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
-
-      <!-- Main hero unit for a primary marketing message or call to action -->
-      <div class="hero-unit">
-        <center>
-          <h1>Simplebox</h1>
-          <p> The simpler way to share files </p>
-        </center>
-      </div>
-
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="span2 offset4">
-          <p><a id="upload-btn" class="btn btn-inverse btn-large">Give a file</a></p>
-            
-           
-        </div>
-        <div class="span3">
-          
-          <p><a id="search-btn" class="btn btn-inverse btn-large">Get a file</a></p>
-         
-       </div>
-       
-      </div>
-
-    </br> </br>
-      <div class="row">
-
-        <div class="span4 offset2">
-
-              <div class="fileupload fileupload-new" data-provides="fileupload" id="upload" visibility="hidden">
-
-                <div class="input-append">
-                    <div class="uneditable-input span2">
-                      <i class="icon-file fileupload-exists"></i>
-                       <span class="fileupload-preview"></span
-                    ></div>
-                    <span class="btn btn-file">
-                      <span class="fileupload-new">Select file</span>
-                      <span class="fileupload-exists">Change</span>
-                      <input type="file">
-                    </span>
-                    <a href="#" class="btn fileupload-exists" data-dismiss="fileupload">Remove</a>
-                </div>
-              </div>
-        </div>
-
-        <div class="span3" >
+ <div class="span3" >
            <div class='input-append' id="search" visibility="hidden">
             <input placeholder="Search..." />
             <button class='btn add-on'>
               <i class="icon-search"></i>
            </button>
-          </div>
+    </div>
 
-        </div>
-      </div>
 
-      <hr>
 
-      <footer>
-        <p>© Company 2012</p>
-      </footer>
-
-    </div> <!-- /container -->
-
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="{{STATIC_URL}}js/jquery.js"></script>
-    <script src="{{STATIC_URL}}js/bootstrap-transition.js"></script>
-    <script src="{{STATIC_URL}}js/bootstrap-alert.js"></script>
-    <script src="{{STATIC_URL}}js/bootstrap-modal.js"></script>
-    <script src="{{STATIC_URL}}js/bootstrap-dropdown.js"></script>
-    <script src="{{STATIC_URL}}js/bootstrap-scrollspy.js"></script>
-    <script src="{{STATIC_URL}}js/bootstrap-tab.js"></script>
-    <script src="{{STATIC_URL}}js/bootstrap-tooltip.js"></script>
-    <script src="{{STATIC_URL}}js/bootstrap-popover.js"></script>
-    <script src="{{STATIC_URL}}js/bootstrap-button.js"></script>
-    <script src="{{STATIC_URL}}js/bootstrap-collapse.js"></script>
-    <script src="{{STATIC_URL}}js/bootstrap-carousel.js"></script>
-    <script src="{{STATIC_URL}}js/bootstrap-typeahead.js"></script>
-    <script src="{{STATIC_URL}}js/bootstrap-fileupload.js"></script>
-    
-
-    
-
-    <script type="text/javascript" src="http://underscorejs.org/underscore.js"></script>
-    <script type="text/javascript" src="{{STATIC_URL}}js/home.js"></script>
-  
-
-</body></html>
+{% endblock content %}
