--- a/templates/search.html
+++ b/templates/search.html
@@ -3,14 +3,49 @@
 
 {% block content %}
 
+<div class="row">
  <div class="span3" >
-           <div class='input-append' id="search" visibility="hidden">
-            <input placeholder="Search..." />
-            <button class='btn add-on'>
+           <div class='input-append' >
+            <input id="search-input" placeholder="Search..." />
+            <button id="search-submit" class='btn add-on'>
               <i class="icon-search"></i>
            </button>
-    </div>
+         </div>
+  </div>
+</div>
+
+<div class= "row">
+  <div class="span3">
+    <table class="table zebra-striped table-striped" id="data-table" >
+    <thead>
+      <tr>
+        <th> Matched Files </th>        
+      </tr>
+    </thead>
+    <tbody>
+      
+    </tbody>
+ 
+
+  </table>
+  </div>
+</div>
 
 
 
 {% endblock content %}
+
+{% block js %}
+<script id="search-result-template" type="text/template">
+  <tr> 
+
+    <td><img src="{{STATIC_URL}}ico/document.ico"/></td>
+    <td> <%= file %> </td>
+  </tr>
+</script>
+
+
+<script type="text/javascript" src="{{STATIC_URL}}js/search.js"></script>
+
+
+{% endblock js %}
