Remade changes to home template.

--- a/templates/home.html
+++ b/templates/home.html
@@ -30,9 +30,19 @@
 
         <div class="span4 offset2">
           <!-- Upload a File -->
-          <p>Select a file: <input id="fileinput" type="file"></p>
-          <p>Encrypt the uploaded file: <input id="encrypt" type="checkbox" value="encrypt" /></p>
-          <p>Password: <input id="password" type="password"></p>
+          <p>
+            Select a file: <input id="fileinput" type="file" />
+            <input id="filename" type="text" />
+          </p>
+          <p>
+            Encrypt the uploaded file: <input id="encrypt" type="checkbox" value="encrypt" />
+          </p>
+          <p id="password-p" display="none" style="display: none;">
+            Password: <input id="password" type="password" />
+          </p>
+          <p>
+            <input id="submit-button" type="button" value="Upload" />
+          </p>
 
               <div class="fileupload fileupload-new" data-provides="fileupload" id="upload" visibility="hidden">
 
