Improved upload UI.

--- a/templates/home.html
+++ b/templates/home.html
@@ -31,11 +31,13 @@
         <div class="span4 offset2">
           <!-- Upload a File -->
           <p>
-            Select a file: <input id="fileinput" type="file" />
-            <input id="filename" type="text" />
+            Select a File: <input id="fileinput" type="file" />
           </p>
           <p>
-            Encrypt the uploaded file: <input id="encrypt" type="checkbox" value="encrypt" />
+            Upload Name: <input id="filename" type="text" />
+          </p>
+          <p>
+            Encrypt the Uploaded File: <input id="encrypt" type="checkbox" value="encrypt" />
           </p>
           <p id="password-p" display="none" style="display: none;">
             Password: <input id="password" type="password" />
