switched download/search url heir

--- a/templates/search.html
+++ b/templates/search.html
@@ -7,7 +7,7 @@
  <div class="span3" >
            <div class='input-append' >
             <input id="search-input" placeholder="Search..." />
-            <button id="search-submit" class='btn add-on'>
+            <button class='btn add-on'>
               <i class="icon-search"></i>
            </button>
          </div>
@@ -31,11 +31,6 @@
   </div>
 </div>
 
-
-
-{% endblock content %}
-
-{% block js %}
 <script id="search-result-template" type="text/template">
   <tr> 
 
@@ -47,5 +42,4 @@
 
 <script type="text/javascript" src="{{STATIC_URL}}js/search.js"></script>
 
-
-{% endblock js %}
+{% endblock content %}
