--- a/templates/search.html
+++ b/templates/search.html
@@ -35,7 +35,7 @@
   <tr> 
 
     <td><img src="{{STATIC_URL}}ico/document.ico"/></td>
-    <td> <%= file %> </td>
+    <td> <%= filename %> </td>
   </tr>
 </script>
 
